fix spacing for long ones

--- a/app/theme/today.scss
+++ b/app/theme/today.scss
@@ -7,7 +7,7 @@
 }
 
 .cards {
-  margin-top: 10rem;
+  margin-top: 5rem;
   display: flex;
   justify-content: center;
   min-height: 50%;
@@ -59,5 +59,5 @@
 .blurb {
   color: $palette-black;
   font-size: 2.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
 }
